--- a/flit.ini
+++ b/flit.ini
@@ -4,4 +4,4 @@ author = Matthias Bussonnier
 author-email = bussonniermatthias@gmail.com
 home-page = https://github.com/Carreau/austin
 classifiers = License :: OSI Approved :: MIT License
-
+description-file = readme.md
